force-app/main/default/objects/BrainTree_API__mdt/BrainTree_API__mdt.object-meta.xml
<CustomObject>
    <label>BrainTree API</label>
    <pluralLabel>BrainTree APIs</pluralLabel>
</CustomObject>