force-app/main/default/objects/BrainTree_API__mdt/fields/Braintree_Version__c.field-meta.xml
<CustomField>
    <fullName>Braintree_Version__c</fullName>
    <label>Braintree-Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>