force-app/main/default/objects/BrainTree_API__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content-Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>