force-app/main/default/objects/BrainTree_API__mdt/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>