force-app/main/default/objects/BrainTree_API__mdt/fields/PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>PrivateKey__c</fullName>
    <label>PrivateKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>