force-app/main/default/objects/BrainTree_API__mdt/fields/PublicKey__c.field-meta.xml
<CustomField>
    <fullName>PublicKey__c</fullName>
    <label>PublicKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>